--- a/src/components/Registration/Registration.scss
+++ b/src/components/Registration/Registration.scss
@@ -92,3 +92,12 @@
   flex-direction: row;
   gap: 10px;
 }
+
+.error, .form__note {
+  font-size: 14px;
+  color: red;
+}
+
+.form__note {
+  text-align: right;
+}
